[maven] IDEA-281439 Index refactoring
maven index update - remove ref on MavenIndex, store index info - url as index key

GitOrigin-RevId: 34b1a135070ce09e7f564c2738a81d1746bc2ccb